update stylesheet to resolve event page alignment

--- a/style.css
+++ b/style.css
@@ -3886,7 +3886,7 @@ nav ul {
   }
 @media (min-width: 768px) {
   #events .page-title {
-    float: left; 
+    /*float: left; */
   }
   #events .event-filter {
     float: right;
